--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 # SMTP (e.g. Mailtrap or your SMTP server)
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp-relay.brevo.com
 SMTP_PORT=587
-SMTP_USER=varifyember@gmail.com
-SMTP_PASS=yqhbwphqelrtdwtx
+SMTP_USER=8d5749001@smtp-brevo.com
+SMTP_PASS=HfEhNPaqGIDV9xmn 
